js an html done

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,1 @@
-div {
-	border: 1px solid red;
-}
-
-
-#pressStart
-
-#wins
-
-#currentWord
-
+body { background-image: url("../images/bPage.png"); }
